--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,7 @@
+1.1 (December 2016)
+-------------------
+* add ldapdump.service
+
 1.0 (December 2016)
 -------------------
-
 * initial release [nituacor]
